# opentelemetry-trace-codelab-python

./: README.md
step1/manifests/: client.yaml  server.yaml
step1/src/client/: Dockerfile  client.py  genproto.sh  pyproject.toml
step1/src/loadgen/: loadgen.py  pyproject.toml
step1/src/server/: genproto.sh  pyproject.toml  server.py
step2/manifests/: loadgen.yaml
step2/proto/: shakesapp.proto
step2/src/client/: client.py  config.py  pyproject.toml  shakesapp_pb2.py
step2/src/loadgen/: Dockerfile  loadgen.py  pyproject.toml
step2/src/server/: Dockerfile  shakesapp_pb2_grpc.py
step3/: skaffold.yaml
step3/manifests/: client.yaml
step3/src/client/: client.py  config.py  pyproject.toml
step3/src/loadgen/: loadgen.py  pyproject.toml
step3/src/server/: pyproject.toml  server.py  shakesapp_pb2_grpc.py
